# stellar-disbursement-platform-backend

./: .env.example  .gitignore  .golangci.yml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.development  Dockerfile.wip  Makefile  README.md  TODO.md  go.list  go.mod  go.sum  goimports_check.sh  main.go
.github/: CODEOWNERS  copilot-instructions.md  dependabot.yml  pull_request_template.md
cloudformation/: README.md
cmd/: auth.go  auth_test.go  channel_accounts.go  channel_accounts_test.go  db.go  db_test.go  dist_acc_cmd_service_mock.go  distribution_account_cmd_service.go  distribution_account_cmd_service_test.go  distribution_accounts.go  distribution_accounts_test.go  integration_tests.go  integration_tests_test.go  message.go  message_test.go  multisig_setup.go  multisig_setup_test.go  root.go  root_test.go  serve.go  serve_test.go  tenants.go  tenants_cmd_service_mock.go  tenants_test.go  transaction_submitter.go  transaction_submitter_test.go
contracts/: .gitignore  Cargo.toml
contracts/smart-wallet/: Cargo.toml  Makefile
contracts/smart-wallet/src/: base64_url.rs  lib.rs  test.rs  webauthn.rs
contracts/smart-wallet/test_snapshots/test/: test_validate_signature.1.json  test_webauthn_invalid_challenge_content.1.json  test_webauthn_invalid_challenge_length_in_client_data.1.json  test_webauthn_invalid_type.1.json  test_webauthn_tampered_signature.1.json  test_webauthn_user_not_present.1.json  test_webauthn_user_not_verified.1.json
db/: db.go  db_connection_pool_with_metrics.go  db_connection_pool_with_metrics_test.go  db_test.go  migrate.go  (+10 more)
(+1364 files in other folders)
