[package]
name = "smart-wallet"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["lib", "cdylib"]
doctest = false

[dependencies]
serde = { version = "1", default-features = false, features = ["derive"] }
serde-json-core = { version = "0.6.0", default-features = false }
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
p256 = { version = "0.13.2", features = ["ecdsa"] }
rand_core = { version = "0.6", features = ["getrandom"] }
hex = "0.4"
